Refactor: API method 'add' -> 'train'
